objects/Playground_Sandbox__mdt.object
<CustomObject>
    <description>A list of records containing the name of each Sandbox to be created and wether if it is active or not.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wether the record is active or not.</description>
        <inlineHelpText>Wether the record is active or not.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>This field determines the order the sandboxes are displayed.</inlineHelpText>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Sandbox.</description>
        <inlineHelpText>Type of Sandbox.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DEVELOPER</fullName>
                    <default>true</default>
                    <label>DEVELOPER</label>
                </value>
                <value>
                    <fullName>DEVELOPER_PRO</fullName>
                </value>
                <value>
                    <fullName>PARTIAL</fullName>
                </value>
                <value>
                    <fullName>FULL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Playground Sandbox</label>
    <listViews>
        <fullName>All_with_active_field</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Order__c</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <label>All with active field</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Playground Sandboxes</pluralLabel>
    <validationRules>
        <fullName>MasterLabelLessThan10Characters</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(DeveloperName) &gt; 10</errorConditionFormula>
        <errorDisplayField>Active__c</errorDisplayField>
        <errorMessage>Name can&apos;t be longer than 10 characters.</errorMessage>
    </validationRules>
</CustomObject>